--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,5 @@ jobs:
       - checkout
       - run:
           name: Which bundler?
-          command: bundle (2.2.17)
+          command: bundle -2.2.17
       - ruby/bundle-install
